--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,12 @@
-.App {
-  text-align: center;
+div {
+  /*border: solid 1px lightgray*/
+} 
+
+.main-container {
+  margin-top: 50px;
+  width: 70%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.main-header {
+  margin-bottom: 50px;
 }
