Extract TrackSection from Lick, play around

--- a/src/Lick/Lick.css
+++ b/src/Lick/Lick.css
@@ -18,6 +18,14 @@
   margin-bottom: 5px;
 }
 
+.recorder {
+  text-align: center;
+}
+
+.recorder > .button {
+  border-radius: 9999px;
+}
+
 .tag-container > .tags {
   margin-bottom: 5px;
 }
