Linkify urls in description when showing lick view

--- a/src/render/Lick/Lick.css
+++ b/src/render/Lick/Lick.css
@@ -3,6 +3,23 @@
   margin-bottom: 15px;
 }
 
+.description {
+  color: #4a4a4a;
+  font-size: 14px;
+  margin-bottom: 15px;
+  background-color: white;
+  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+.description a {
+  white-space: pre-wrap; /* css-3 */    
+  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */    
+  white-space: -o-pre-wrap; /* Opera 7 */    
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
 .lick .card-footer, .lick .card-footer-item {
   border: 0px;
 }
