Implement new lick functionality, refactor props to separate domain entities and other args

--- a/src/render/App.css
+++ b/src/render/App.css
@@ -11,6 +11,10 @@ div {
   margin-bottom: 50px;
 }
 
+.lick-new {
+  margin-bottom: 20px;
+}
+
 .lick-list .column {
   /*float: left;*/
   /*margin-right: 35px;*/
