--- a/src/render/App.css
+++ b/src/render/App.css
@@ -1,14 +1,40 @@
-div {
-  /*border: solid 1px lightgray*/
-} 
 
-.main-container {
-  margin-top: 50px;
-  width: 70%;
+
+html {
+  -webkit-app-region: drag
+}
+
+button, .lick-list {
+  -webkit-app-region: no-drag
+}
+
+.top-container {
+  width: 100%;
+  top: 0px;
+  padding-top: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+  /* margin-top: 10px; */
+  position: fixed; 
+  z-index: 10;
+  background-color: #fff;  
+  /* background-color: lightblue; */
+  /* border-bottom: 1px solid lightgrey; */
+  
+}
+
+header {
+   text-align: center; 
 }
 
 .main-header {
   margin-bottom: 50px;
+}
+
+.main-content {
+  margin-top: 150px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .lick-new {
@@ -19,5 +45,5 @@ div {
   /*float: left;*/
   /*margin-right: 35px;*/
   /*margin-bottom: 35px;*/
-  min-width: 300px;
+  width: 300px;
 }
