Integrate redux props and methods with Search component - ongoing

--- a/src/render/App.css
+++ b/src/render/App.css
@@ -2,7 +2,7 @@ html {
   -webkit-app-region: drag
 }
 
-button, .lick-list {
+button, .lick-list, .lick-controls {
   -webkit-app-region: no-drag
 }
 
