--- a/src/render/Lick/Lick.styl
+++ b/src/render/Lick/Lick.styl
@@ -3,6 +3,25 @@
   border-radius: 3px
   background-color: item-color
 
+// TODO Clean up
+
+  // height: 200px
+  .button
+    // margin-right: 10px
+
+.dropdown-trigger
+  .button
+    border-style: none
+
+.dropdown-menu
+  .icon.is-small
+    margin-right: 10px
+
+.card-content
+  padding: 1rem
+
+// ---
+
 .lick-form .artist
   margin-bottom: 10px
 
