Try design modifications for Lick element - ongoing

--- a/src/render/Lick/Lick.styl
+++ b/src/render/Lick/Lick.styl
@@ -4,26 +4,48 @@
   background-color: item-color
 
 // TODO Clean up
-
-  // height: 200px
-  .button
-    // margin-right: 10px
-
-.dropdown-trigger
-  .button
-    border-style: none
-
 .dropdown-menu
   .icon.is-small
     margin-right: 10px
 
 .card-content
   padding: 1rem
+  margin-bottom: 10px
+
+.dropdown-trigger
+  padding-left: 10px
+  padding-bottom: 5px
+
+  .icon
+    color: gray
+
+  .button:hover
+    color: #6f6f6f
 
 // ---
+.lick-form
+  .artist
+    margin-bottom: 10px
 
-.lick-form .artist
-  margin-bottom: 10px
+.lick-view
+  .card-content
+    height: 145px
+
+  .artist
+    font-weight: bold
+    font-size: 14px
+    color: gray
+    margin-bottom: 7.5px
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
+
+  .card-footer-item
+    justify-content: flex-start
+
+  time
+    color: darkgray
+    margin-left: 5px
 
 .description
   margin-bottom: 15px
