Try lick item new design with picture background - all hacked around

--- a/src/render/App.styl
+++ b/src/render/App.styl
@@ -37,7 +37,8 @@ button, .lick-list, #button-lick-create, #search-container
   background-color: top-container-color
 
   .tabs
-    margin-top: 6px
+    margin-top: 4px
+    font-size: font-size
     font-weight: bold
 
     ul
