Try more design changes

--- a/src/render/Lick/Lick.styl
+++ b/src/render/Lick/Lick.styl
@@ -69,15 +69,15 @@ background(img)
   background-size: cover
 
 #track-container
-  padding-top: 20px
-  padding-bottom: 20px
+  background-color: whitesmoke
+  padding-top: 10px
+  padding-bottom: 10px
   background-size: cover
 
   // width: 276px;
   // margin-left: -16px;
+  border: 1px solid lightgray
 
-  // &:hover
-  // background-size: cover
   &:hover .button
     visibility: visible
 
