--- a/src/render/Lick/Lick.styl
+++ b/src/render/Lick/Lick.styl
@@ -3,6 +3,9 @@ description-font-size = 14px
 date-font-size = 12px
 
 .lick
+  flex: 0 1 260px
+  margin-right: 30px
+  margin-bottom: 30px
   border: none
   border-radius: 3px
   background-color: item-color
@@ -33,7 +36,7 @@ date-font-size = 12px
 
 .lick-view
   height: 220px
-  
+
   .card-content
     height: 145px
 
@@ -69,14 +72,13 @@ background(img)
   background-size: cover
 
 #track-container
-  background-color: whitesmoke
   padding-top: 10px
   padding-bottom: 10px
-  background-size: cover
-
   // width: 276px;
   // margin-left: -16px;
   border: 1px solid lightgray
+  background-color: whitesmoke
+  background-size: cover
 
   &:hover .button
     visibility: visible
