Cleanup Lick component and css

--- a/src/style/abstracts/colors.styl
+++ b/src/style/abstracts/colors.styl
@@ -2,3 +2,6 @@ background-color = white
 top-container-color = #eef2f3
 main-container-color = white
 border-color = #dadada
+//
+lick-background-color = white
+
