--- a/src/style/components/lick-button-create.styl
+++ b/src/style/components/lick-button-create.styl
@@ -2,4 +2,4 @@
   display: inline-block
   margin-right: 10px
   border-radius: control-border-radius
-  font-size: font-size
+  font-size: control-font-size
