--- a/src/style/components/lick-search.styl
+++ b/src/style/components/lick-search.styl
@@ -7,7 +7,7 @@ suggestion-highlighted-color = rgba(245, 245, 245, 0.9)
   input
     width: 200px
     border-radius: 20px
-    font-size: font-size
+    font-size: control-font-size
 
   .suggestion-container-open
     overflow-y: scroll
@@ -17,7 +17,7 @@ suggestion-highlighted-color = rgba(245, 245, 245, 0.9)
 
   .suggestion, .section-title
     padding: 5px 10px
-    font-size: font-size
+    font-size: control-font-size
 
   .suggestion-highlighted
     background-color: suggestion-highlighted-color
