--- a/src/style/layouts/top-container.styl
+++ b/src/style/layouts/top-container.styl
@@ -6,7 +6,7 @@
   .tabs
     margin-top: 4px
     font-weight: bold
-    font-size: font-size
+    font-size: control-font-size
 
     ul
       border-bottom-color: top-container-color
