--- a/src/style/components/lick-view.styl
+++ b/src/style/components/lick-view.styl
@@ -1,81 +1,44 @@
-artist-font-size = 14px
-description-font-size = 14px
-date-font-size = 12px
+lick-artist-color = #636363
+lick-menu-color = gray
 
-.lick
+.lick-view
   flex: 0 1 260px
   margin-right: 30px
   margin-bottom: 30px
-  border: none
-  border-radius: 3px
-  background-color: item-color
-
-// TODO Clean up
-.dropdown-menu
-  .icon.is-small
-    margin-right: 10px
-
-.card-content
-  margin-bottom: 10px
-  padding: 1rem
-
-.dropdown-trigger
-  padding-bottom: 5px
-  padding-left: 10px
-
-  .icon
-    color: gray
-
-  .button:hover
-    color: #6f6f6f
-
-// ---
-.lick-form
-  .artist
-    margin-bottom: 10px
-
-.lick-view
   height: 220px
+  border-radius: 3px
+  background-color: lick-background-color
+  font-size: lick-font-size
 
   .card-content
+    padding: 1rem
     height: 145px
+
+  .dropdown-trigger
+    padding-bottom: 5px
+    padding-left: 10px
+
+    .icon
+      color: lick-menu-color
+
+  .dropdown-menu
+    .icon.is-small
+      margin-right: 10px
 
   .artist
     overflow: hidden
     margin-bottom: 7.5px
-    color: #636363
+    color: lick-artist-color
     text-overflow: ellipsis
     white-space: nowrap
     font-weight: bold
-    font-size: artist-font-size
-
-  .card-footer-item
-    justify-content: flex-start
-
-    time
-      font-size: date-font-size
-
-  time
-    margin-left: 5px
-    color: darkgray
 
   .tags
     margin-top: 20px
 
-gradient = linear-gradient(rgba(222, 222, 222, 0.45), rgba(222, 222, 222, 0.45))
-img1 = url('https://cps-static.rovicorp.com/3/JPG_400/MI0002/750/MI0002750232.jpg?partner=allrovi.com')
-img2 = url('https://upload.wikimedia.org/wikipedia/commons/f/f5/Django_Reinhardt_%28Gottlieb_07301%29.jpg')
-
-background(img)
-  // background-image: img
-  // background-position-y: 30%
-  background-size: cover
-
 #track-container
   padding-top: 10px
   padding-bottom: 10px
-  // width: 276px;
-  // margin-left: -16px;
   border: 1px solid lightgray
   background-color: whitesmoke
   background-size: cover
@@ -97,7 +60,7 @@ background(img)
   margin-bottom: 15px
   background-color: white
   color: #4a4a4a
-  font-size: description-font-size
+  font-size: lick-font-size
   font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
   -webkit-font-smoothing: antialiased
 
