--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -6,10 +6,10 @@
 @require 'components/button.styl'
 @require 'components/lick-search.styl'
 @require 'components/lick-button-create.styl'
+@require 'components/lick-view.styl'
 // 
 @require 'layouts/root.styl'
 @require 'layouts/lick-controls-container.styl'
 @require 'layouts/top-container.styl'
 @require 'layouts/lick-container.styl'
-@require 'layouts/lick.styl'
 @require 'layouts/track-container.styl'
