Revamp lick form - ongoing

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -7,6 +7,7 @@
 @require 'components/lick-search.styl'
 @require 'components/lick-button-create.styl'
 @require 'components/lick-view.styl'
+@require 'components/lick-form.styl'
 // 
 @require 'layouts/root.styl'
 @require 'layouts/lick-controls-container.styl'
