Improve design of lick form, try different things - ongoing

--- a/src/style/components/lick-form.styl
+++ b/src/style/components/lick-form.styl
@@ -1,2 +1,17 @@
+.modal-content
+  width: 450px
+
 .lick-form
   font-size: lick-font-size
+
+  .label, .input
+    font-size: 14px
+
+  .tags
+    margin-bottom: 0px
+
+  .field:not(:last-child)
+    margin-bottom: 15px
+
+  .field:nth-last-child(2)
+    margin-bottom: 20px
