--- a/src/style/components/lick-view.styl
+++ b/src/style/components/lick-view.styl
@@ -37,8 +37,7 @@ lick-menu-color = gray
     margin-top: 20px
 
 #track-container
-  padding-top: 10px
-  padding-bottom: 10px
+  padding: 10px
   border: 1px solid lightgray
   background-color: whitesmoke
   background-size: cover
@@ -54,7 +53,6 @@ lick-menu-color = gray
   .button
     visibility: hidden
     margin: 0 auto
-    border-radius: 50%
 
 .description
   margin-bottom: 15px
