--- a/src/style/layouts/lick-container.styl
+++ b/src/style/layouts/lick-container.styl
@@ -2,9 +2,10 @@
   background-color: main-container-color
 
 .main-content
-  margin-top: top-container-height + controls-container-height + 20px
+  margin-top: top-container-height + controls-container-height
   margin-right: main-content-margin-right
   margin-left: main-content-margin-left
+  padding-top: 20px
 
 .lick-list
   display: flex
