--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -4,6 +4,7 @@
 @require 'abstracts/mixins.styl'
 // 
 @require 'components/button.styl'
+@require 'components/button-audio.styl'
 @require 'components/lick-search.styl'
 @require 'components/lick-button-create.styl'
 @require 'components/lick-view.styl'
