Extract track-container common style

--- a/src/style/components/lick-view.styl
+++ b/src/style/components/lick-view.styl
@@ -33,26 +33,12 @@ lick-menu-color = gray
     white-space: nowrap
     font-weight: bold
 
+  .track-container
+    .button
+      visibility: hidden
+
   .tags
     margin-top: 20px
-
-#track-container
-  padding: 10px
-  border: 1px solid lightgray
-  background-color: whitesmoke
-  background-size: cover
-
-  &:hover .button
-    visibility: visible
-
-  .center
-    display: block
-    margin: 0 auto
-    width: 52px
-
-  .button
-    visibility: hidden
-    margin: 0 auto
 
 .description
   margin-bottom: 15px
@@ -61,16 +47,6 @@ lick-menu-color = gray
   font-size: lick-font-size
   font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
   -webkit-font-smoothing: antialiased
-
-.description a
-  white-space: pre-wrap /* css-3 */
-  white-space: -moz-pre-wrap /* Mozilla, since 1999 */
-  white-space: -pre-wrap /* Opera 4-6 */
-  white-space: -o-pre-wrap /* Opera 7 */
-  word-wrap: break-word /* Internet Explorer 5.5+ */
-
-.description.textarea
-  min-height: 100px
 
 .lick .card-footer, .lick .card-footer-item
   border: 0px
