--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -9,6 +9,7 @@
 @require 'components/lick-button-create.styl'
 @require 'components/lick-view.styl'
 @require 'components/lick-form.styl'
+@require 'components/track-container.styl'
 // 
 @require 'layouts/root.styl'
 @require 'layouts/lick-controls-container.styl'
