Switch nav to button style, Set track container style

--- a/src/style/components/lick-form.styl
+++ b/src/style/components/lick-form.styl
@@ -15,3 +15,9 @@
 
   .field:nth-last-child(2)
     margin-bottom: 20px
+
+  .track-container
+    margin-right: -24px
+    margin-left: -24px
+    padding-left: 24px
+    padding-right: 24px
