--- a/src/style/layouts/top-container.styl
+++ b/src/style/layouts/top-container.styl
@@ -2,19 +2,9 @@
   fixed-container(0px, top-container-height)
   border-bottom: 1px solid border-color
   background-color: top-container-color
+  text-align: center
+  z-index: 15
 
-  .tabs
-    margin-top: 4px
-    font-weight: bold
-    font-size: control-font-size
-
-    ul
-      border-bottom-color: top-container-color
-
-      li
-        a
-          padding-bottom: 9px
-
-      li:not(.is-active)
-        a
-          border-bottom-color: top-container-color
+  nav
+    display: inline-block
+    margin-top: 7px
