--- a/src/style/components/lick-view.styl
+++ b/src/style/components/lick-view.styl
@@ -5,14 +5,14 @@ lick-menu-color = gray
   flex: 0 1 260px
   margin-right: 30px
   margin-bottom: 30px
-  height: 220px
+  // height: 220px
+  // width: 260px
   border-radius: 3px
   background-color: lick-background-color
   font-size: lick-font-size
 
   .card-content
     padding: 1rem
-    height: 145px
 
   .dropdown-trigger
     padding-bottom: 5px
@@ -34,8 +34,11 @@ lick-menu-color = gray
     font-weight: bold
 
   .track-container
+    margin-right: -16px
+    margin-left: -16px
+
     .button
-      visibility: hidden
+      // visibility: hidden
 
   .tags
     margin-top: 20px
