Improve track delete button

--- a/src/style/components/lick-form.styl
+++ b/src/style/components/lick-form.styl
@@ -19,5 +19,13 @@
   .track-container
     margin-right: -24px
     margin-left: -24px
-    padding-left: 24px
     padding-right: 24px
+    padding-left: 24px
+
+    .track
+      &>div
+        margin: 0 auto
+        width: 36px
+
+    .track-delete
+      margin-top: 4px
