Add track validation and error message

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -5,6 +5,7 @@
 // 
 @require 'components/button.styl'
 @require 'components/button-audio.styl'
+@require 'components/error-message.styl'
 @require 'components/lick-search.styl'
 @require 'components/lick-button-create.styl'
 @require 'components/lick-view.styl'
