Update react components to support new create lick functionality

--- a/src/style/components/lick-view.styl
+++ b/src/style/components/lick-view.styl
@@ -5,7 +5,7 @@ lick-menu-color = gray
   flex: 0 1 260px
   margin-right: 30px
   margin-bottom: 30px
-  // height: 220px
+  min-height: 198.5px
   // width: 260px
   border-radius: 3px
   background-color: lick-background-color
