--- a/src/style/components/lick-view.styl
+++ b/src/style/components/lick-view.styl
@@ -43,7 +43,7 @@ lick-menu-color = gray
   .tags
     margin-top: 20px
 
-.song
+.description
   margin-bottom: 15px
   background-color: white
   color: #4a4a4a
