Display only one line of lick tags, wrap with ellipsis and show tooltip with the whole list

--- a/src/style/components/lick-view.styl
+++ b/src/style/components/lick-view.styl
@@ -6,7 +6,7 @@ lick-menu-color = gray
   margin-right: 30px
   margin-bottom: 30px
   min-height: 198.5px
-  // width: 260px
+  width: 228px
   border-radius: 3px
   background-color: lick-background-color
   font-size: lick-font-size
@@ -41,7 +41,9 @@ lick-menu-color = gray
       // visibility: hidden
 
   .tags
+    overflow: hidden
     margin-top: 20px
+    height: 32px
 
 .description
   margin-bottom: 15px
