Make hover cursor default on tags

--- a/src/style/components/lick-view.styl
+++ b/src/style/components/lick-view.styl
@@ -44,6 +44,9 @@ lick-menu-color = gray
     overflow: hidden
     margin-top: 20px
     height: 32px
+    
+    &:hover
+      cursor: default
 
 .description
   margin-bottom: 15px
